pushgateway/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pushgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pushgateway
      app.kubernetes.io/instance: pushgateway
  template:
    metadata:
      name: pushgateway
      labels:
        app.kubernetes.io/name: pushgateway
        app.kubernetes.io/instance: pushgateway
    spec:
      containers:
      - name: pushgateway
        image: prom/pushgateway:v1.11.1
        ports:
        - name: web
          containerPort: 9091
