pushgateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  labels:
    name: pushgateway
  name: pushgateway
spec:
  selector:
    app: pushgateway
  ports:
    - name: pushgateway
      protocol: TCP
      port: 9091
